--- a/src/app/admin/components/post-product-faq/post-product-faq.component.html
+++ b/src/app/admin/components/post-product-faq/post-product-faq.component.html
@@ -1,20 +1,18 @@
 <div class="container">
-    <h2>Post FAQ</h2>
+    <h2>Publicar Pregunta Frecuente (FAQ)</h2>
     <form [formGroup]="FAQForm" (ngSubmit)="postFAQ()">
         <mat-form-field appearance="outline" class="form-field">
-            <mat-label>Question</mat-label>
-            <textarea matInput placeholder="Question" formControlName="question"></textarea>
-            <mat-error *ngIf="FAQForm.get('question')?.hasError('required')">This Input Is
-                Required!</mat-error>
+            <mat-label>Pregunta</mat-label>
+            <textarea matInput placeholder="Pregunta" formControlName="question"></textarea>
+            <mat-error *ngIf="FAQForm.get('question')?.hasError('required')">¡Este campo es obligatorio!</mat-error>
         </mat-form-field>
   
         <mat-form-field appearance="outline" class="form-field">
-            <mat-label>Answer</mat-label>
-            <textarea matInput placeholder="Answer" formControlName="answer"></textarea>
-            <mat-error *ngIf="FAQForm.get('answer')?.hasError('required')">This Input Is
-                Required!</mat-error>
+            <mat-label>Respuesta</mat-label>
+            <textarea matInput placeholder="Respuesta" formControlName="answer"></textarea>
+            <mat-error *ngIf="FAQForm.get('answer')?.hasError('required')">¡Este campo es obligatorio!</mat-error>
         </mat-form-field>
         
-        <button mat-raised-button color="primary" type="submit">Post FAQ</button>
+        <button mat-raised-button color="primary" type="submit">Publicar Pregunta Frecuente</button>
     </form>
-  </div>
+</div>
