--- a/src/app/customer/components/cart/cart.component.html
+++ b/src/app/customer/components/cart/cart.component.html
@@ -3,15 +3,15 @@
         <div class="cart-item" *ngFor="let item of cartItems">
             <div class="product-info">
                 <div class="product-image">
-                    <img [src]="item.processedImg" alt="product-image" />
+                    <img [src]="item.processedImg" alt="imagen del producto" />
                 </div>
 
                 <div class="product-details">
                     <div class="item-row">
                         <div class="item-name" [ngClass]="{ 'highlight' : item.highlight }">
-                            {{ item.productName}}
+                            {{ item.productName }}
                         </div>
-                        <div class="item-price">{{ item.price  | currency }}</div>
+                        <div class="item-price">{{ item.price | currency }}</div>
                         <div class="quantity-controls">
                             <button mat-icon-button [disabled]="item.quantity == 1" (click)="decreaseQuantity(item.productId)">
                                 <mat-icon>remove_circle_outline</mat-icon>
@@ -28,35 +28,35 @@
             </div>
         </div>
         <div class="total-price">
-            Total Amount: {{ order.totalAmount | currency }}
+            Monto total: {{ order.totalAmount | currency }}
         </div>
         <div class="total-price">
-            Amount: {{ order.amount | currency }}
+            Monto: {{ order.amount | currency }}
         </div>
         <div class="total-price" *ngIf="order.couponName != null">
-            Coupon Applied: {{ order.couponName }}
+            Cupón aplicado: {{ order.couponName }}
         </div>
         <div>
-            <button mat-raised-button color="primary" (click)="placeOrder()">Place Order</button>
+            <button mat-raised-button color="primary" (click)="placeOrder()">Realizar pedido</button>
         </div>
     </div>
 
     <div class="container" *ngIf="order.couponName == null">
         <form [formGroup]="couponForm" (ngSubmit)="appyCoupon()">
             <mat-form-field appearance="outline" class="form-field">
-                <mat-label>Code</mat-label>
-                <input matInput type="text" placeholder="Code" formControlName="code" />
-                <mat-error *ngIf="couponForm.get('cade')?.hasError('required')">This input is required!</mat-error>
+                <mat-label>Código</mat-label>
+                <input matInput type="text" placeholder="Código" formControlName="code" />
+                <mat-error *ngIf="couponForm.get('cade')?.hasError('required')">¡Este campo es obligatorio!</mat-error>
             </mat-form-field>
 
-            <button mat-raised-button color="primary" type="submit">Apply Coupon</button>
+            <button mat-raised-button color="primary" type="submit">Aplicar cupón</button>
         </form>
     </div>
 </div>
 
 <ng-template #emptyCart>
     <div class="empty-cart">
-        <mat-icon class="icon">remove_shopping_cart</mat-icon>+
-        <span>Nothing to see here.</span>
+        <mat-icon class="icon">remove_shopping_cart</mat-icon>
+        <span>No hay nada que ver aquí.</span>
     </div>
 </ng-template>
