--- a/src/app/admin/components/analytics/analytics.component.html
+++ b/src/app/admin/components/analytics/analytics.component.html
@@ -1,22 +1,22 @@
 <div style="padding: 30px;">
     <app-order-by-status [data]="data"></app-order-by-status>
-  </div>
+</div>
   
-  <div class="analytics-container">
+<div class="analytics-container">
     <mat-card class="analytics-card">
         <mat-card-header>
             <div mat-card-avatar class="metric-avatar">
                 0
             </div>
-            <mat-card-title>Orders</mat-card-title>
+            <mat-card-title>Pedidos</mat-card-title>
         </mat-card-header>
         <mat-card-content>
             <div class="metric-value">{{ data.currentMonthOrders }}</div>
-            <div class="metric-subtext">Current Month</div>
+            <div class="metric-subtext">Mes Actual</div>
         </mat-card-content>
         <mat-card-content class="previous-month">
             <div class="metric-value">{{ data.previousMonthOrders }}</div>
-            <div class="metric-subtext">Previous Month</div>
+            <div class="metric-subtext">Mes Anterior</div>
         </mat-card-content>
     </mat-card>
 
@@ -25,15 +25,15 @@
             <div mat-card-avatar class="metric-avatar">
                 E
             </div>
-            <mat-card-title>Earnings</mat-card-title>
+            <mat-card-title>Ganancias</mat-card-title>
         </mat-card-header>
         <mat-card-content>
             <div class="metric-value">{{ data.currentMonthEarnings | currency: 'USD': true }}</div>
-            <div class="metric-subtext">Current Month</div>
+            <div class="metric-subtext">Mes Actual</div>
         </mat-card-content>
         <mat-card-content class="previous-month">
             <div class="metric-value">{{ data.previousMonthEarnings | currency: 'USD': true }}</div>
-            <div class="metric-subtext">Previous Month</div>
+            <div class="metric-subtext">Mes Anterior</div>
         </mat-card-content>
       </mat-card>
 </div>
