--- a/src/app/admin/components/analytics/order-by-status/order-by-status.component.html
+++ b/src/app/admin/components/analytics/order-by-status/order-by-status.component.html
@@ -4,7 +4,8 @@
             <div mat-card-avatar class="status-avatar">
             P
             </div>
-            <mat-card-title>Placed</mat-card-title>
+
+            <mat-card-title>Realizado</mat-card-title>
         </mat-card-header>
 
         <mat-card-content>
@@ -17,7 +18,7 @@
             <div mat-card-avatar class="status-avatar">
             S
             </div>
-            <mat-card-title>Shipped</mat-card-title>
+            <mat-card-title>Enviado</mat-card-title>
         </mat-card-header>
 
         <mat-card-content>
@@ -30,7 +31,7 @@
           <div mat-card-avatar class="status-avatar">
             D
           </div>
-          <mat-card-title>Delivered</mat-card-title>
+          <mat-card-title>Entregado</mat-card-title>
         </mat-card-header>
         <mat-card-content>
           <div class="status-value">{{ data.delivered }}</div>
