--- a/src/app/admin/components/coupons/coupons.component.html
+++ b/src/app/admin/components/coupons/coupons.component.html
@@ -2,34 +2,33 @@
     <mat-card>
         <mat-card-content>
             <table mat-table [dataSource]="coupons" class="mat-elevation-z8">
-                <ng-container matColmunDef="id">
-                    <th mat-header-cell *matHeaderCellDef>Coupon ID</th>
+                <ng-container matColumnDef="id">
+                    <th mat-header-cell *matHeaderCellDef>ID del Cupón</th>
                     <td mat-cell *matCellDef="let coupon">{{ coupon.id }}</td>
                 </ng-container>
 
-                <ng-container matColmunDef="name">
-                    <th mat-header-cell *matHeaderCellDef>Name</th>
+                <ng-container matColumnDef="name">
+                    <th mat-header-cell *matHeaderCellDef>Nombre</th>
                     <td mat-cell *matCellDef="let coupon">{{ coupon.name }}</td>
                 </ng-container>
 
-                <ng-container matColmunDef="discount">
-                    <th mat-header-cell *matHeaderCellDef>Discount</th>
+                <ng-container matColumnDef="discount">
+                    <th mat-header-cell *matHeaderCellDef>Descuento</th>
                     <td mat-cell *matCellDef="let coupon" class="bold-cell">{{ coupon.discount }}%</td>
                 </ng-container>
 
-                <ng-container matColmunDef="code">
-                    <th mat-header-cell *matHeaderCellDef>Code</th>
+                <ng-container matColumnDef="code">
+                    <th mat-header-cell *matHeaderCellDef>Código</th>
                     <td mat-cell *matCellDef="let coupon" class="bold-cell">{{ coupon.code }}</td>
                 </ng-container>
 
-                <ng-container matColmunDef="expirationDate">
-                    <th mat-header-cell *matHeaderCellDef>Expiration Date</th>
+                <ng-container matColumnDef="expirationDate">
+                    <th mat-header-cell *matHeaderCellDef>Fecha de Expiración</th>
                     <td mat-cell *matCellDef="let coupon">{{ coupon.expirationDate | date: 'dd/MM/yyyy' }}</td>
                 </ng-container>
 
                 <tr mat-header-row *matHeaderRowDef="['id','name','discount','code', 'expirationDate']"></tr>
                 <tr mat-row *matRowDef="let row; columns: ['id','name','discount','code','expirationDate']"></tr>
-
             </table>
         </mat-card-content>
     </mat-card>
