--- a/src/app/admin/components/dashboard/dashboard.component.html
+++ b/src/app/admin/components/dashboard/dashboard.component.html
@@ -1,19 +1,18 @@
 <form [formGroup]="searchProductForm" class="search-form" (submit)="submitForm()">
     <mat-form-field appearance="outline" class="search-input">
-        <mat-label>Enter Keyboard to Search</mat-label>
+        <mat-label>Escribe para Buscar</mat-label>
         <input matInput formControlName="title">
 
         <button mat-button matSuffix color="primary" [disabled]="searchProductForm.invalid">
-            <mat-icon>Search</mat-icon>
+            <label >Aceptar</label>
         </button>
-
     </mat-form-field>
 </form>
 
 <div class="product-list">
     <mat-card class="product-card" *ngFor="let product of products">
         <div class="product-image">
-            <img [src]="product.processedImg" alt="product-image">
+            <img [src]="product.processedImg" alt="imagen-del-producto">
         </div>
 
         <div class="product-details">
@@ -23,25 +22,26 @@
             <mat-divider></mat-divider>
             <div class="product-info">
                 <div class="info-row">
-                    <span class="info-label">Price:</span>
+                    <span class="info-label">Precio:</span>
                     <span class="info-value">${{ product.price }}</span>
                 </div>
                 <div class="info-row">
-                    <span class="info-label">Category:</span>
-                    <span class="info-value">${{ product.categoryName }}</span>
+                    <span class="info-label">Categoría:</span>
+                    <span class="info-value">{{ product.categoryName }}</span>
                 </div>
             </div>
 
             <mat-divider></mat-divider>
             <div class="actions">
                 <button mat-raised-button color="primary" class="update-button"
-                    [routerLink]="'/admin/faq/' + product.id">FAQ</button>
+                    [routerLink]="'/admin/faq/' + product.id">Preguntas Frecuentes</button>
                 <button mat-raised-button color="accent" class="update-button"
-                    [routerLink]="'/admin/product/' + product.id">Update</button>
+                    [routerLink]="'/admin/product/' + product.id">Actualizar</button>
                 <button mat-raised-button color="warn" class="delete-button" (click)="deleteProduct(product.id)">
-                    Delete
+                    Eliminar
                 </button>
             </div>
         </div>
     </mat-card>
 </div>
+
