--- a/src/app/admin/components/orders/orders.component.html
+++ b/src/app/admin/components/orders/orders.component.html
@@ -4,47 +4,46 @@
         <table mat-table [dataSource]="orders" class="mat-elevation-z8">
 
             <ng-container matColumnDef="trackingId">
-                <th mat-header-cell *matHeaderCellDef>Tracking ID</th>
+                <th mat-header-cell *matHeaderCellDef>ID de seguimiento</th>
                 <td mat-cell *matCellDef="let order">{{ order.trackingId }}</td>
             </ng-container>
 
             <ng-container matColumnDef="userName">
-                <th mat-header-cell *matHeaderCellDef>User Name</th>
+                <th mat-header-cell *matHeaderCellDef>Nombre de Usuario</th>
                 <td mat-cell *matCellDef="let order">{{ order.userName }}</td>
             </ng-container>
 
             <ng-container matColumnDef="description">
-                <th mat-header-cell *matHeaderCellDef>Description</th>
+                <th mat-header-cell *matHeaderCellDef>Descripción</th>
                 <td mat-cell *matCellDef="let order">{{ order.orderDescription }}</td>
             </ng-container>
             
             <ng-container matColumnDef="address">
-                <th mat-header-cell *matHeaderCellDef>Address</th>
+                <th mat-header-cell *matHeaderCellDef>Dirección</th>
                 <td mat-cell *matCellDef="let order">{{ order.address }}</td>
             </ng-container>
             
             <ng-container matColumnDef="date">
-                <th mat-header-cell *matHeaderCellDef>Date</th>
+                <th mat-header-cell *matHeaderCellDef>Fecha</th>
                 <td mat-cell *matCellDef="let order">{{ order.date | date: 'dd/MM/yyyy' }}</td>
             </ng-container>
           
             <ng-container matColumnDef="status">
-                <th mat-header-cell *matHeaderCellDef>Status</th>
+                <th mat-header-cell *matHeaderCellDef>Estado</th>
                 <td mat-cell *matCellDef="let order">{{ order.orderStatus }}</td>
             </ng-container>
 
             <ng-container matColumnDef="action">
-                <th mat-header-cell *matHeaderCellDef>Action</th>
+                <th mat-header-cell *matHeaderCellDef>Acción</th>
                 <td mat-cell *matCellDef="let order">
-                    <button mat-raised-button color="primary" [matMenuTriggerFor]="menu">Action</button>
+                    <button mat-raised-button color="primary" [matMenuTriggerFor]="menu">Acción</button>
                     <mat-menu #menu="matMenu">
                         <span>
                             <span>
-                                <button mat-menu-item (click)="changeOrderStatus(orders.id,'Shipped')">Shipped</button>
+                                <button mat-menu-item (click)="changeOrderStatus(orders.id,'Shipped')">Enviado</button>
                             </span>
                             <span>
-                                <button mat-menu-item
-                                (click)="changeOrderStatus(orders.id,'Delivered')" >Delivered</button>
+                                <button mat-menu-item (click)="changeOrderStatus(orders.id,'Delivered')">Entregado</button>
                             </span>
                         </span>
                     </mat-menu>
@@ -62,4 +61,4 @@
         </table>
       </mat-card-content>
     </mat-card>
-  </div>
+</div>
