--- a/src/app/admin/components/post-category/post-category.component.html
+++ b/src/app/admin/components/post-category/post-category.component.html
@@ -1,19 +1,19 @@
 <div class="container">
-    <h2>Add Category</h2>
+    <h2>Agregar Categoría</h2>
     <form [formGroup]="categoryForm" (ngSubmit)="addCategory()">
 
-        <mat-form-field apperance="outline" class="form-field">
-            <mat-label>Name</mat-label>
-            <input matInput type="text" placeholder="Name" formControlName="name"/>
-            <mat-error *ngIf="categoryForm.get('name')?.hasError('required')">This input is required!</mat-error>
+        <mat-form-field appearance="outline" class="form-field">
+            <mat-label>Nombre</mat-label>
+            <input matInput type="text" placeholder="Nombre" formControlName="name"/>
+            <mat-error *ngIf="categoryForm.get('name')?.hasError('required')">¡Este campo es obligatorio!</mat-error>
         </mat-form-field> 
         
-        <mat-form-field apperance="outline" class="form-field">
-            <mat-label>Description</mat-label>
-            <input matInput type="text" placeholder="description" formControlName="description"/>
-            <mat-error *ngIf="categoryForm.get('description')?.hasError('required')">This input is required!</mat-error>
+        <mat-form-field appearance="outline" class="form-field">
+            <mat-label>Descripción</mat-label>
+            <input matInput type="text" placeholder="Descripción" formControlName="description"/>
+            <mat-error *ngIf="categoryForm.get('description')?.hasError('required')">¡Este campo es obligatorio!</mat-error>
         </mat-form-field>
         
-        <button mat-raised-button color="primary" type="submit">Add Category</button>
+        <button mat-raised-button color="primary" type="submit">Agregar Categoría</button>
     </form>
 </div>
