--- a/src/app/admin/components/post-coupon/post-coupon.component.html
+++ b/src/app/admin/components/post-coupon/post-coupon.component.html
@@ -1,42 +1,43 @@
 <div class="container">
-    <h2>Add Coupon</h2>
-  
-    <form [formGroup]="couponForm" (ngSubmit)="addCoupon()">
-      <mat-form-field appearance="outline" class="form-field">
-        <mat-label>Name</mat-label>
-        <input matInput type="text" placeholder="Name" formControlName="name" />
-        <mat-error *ngIf="couponForm.get('name')?.hasError('required')">
-          This input is required!
-        </mat-error>
-      </mat-form-field>
-  
-      <mat-form-field appearance="outline" class="form-field">
-        <mat-label>Code</mat-label>
-        <input matInput type="text" placeholder="Code" formControlName="code" />
-        <mat-error *ngIf="couponForm.get('code')?.hasError('required')">
-          This input is required!
-        </mat-error>
-      </mat-form-field>
-  
-      <mat-form-field appearance="outline" class="form-field">
-        <mat-label>Discount %</mat-label>
-        <input matInput type="number" placeholder="Discount" formControlName="discount" />
-        <mat-error *ngIf="couponForm.get('discount')?.hasError('required')">
-          This input is required!
-        </mat-error>
-      </mat-form-field>
+  <h2>Agregar Cupón</h2>
 
-      <mat-form-field appearance="outline" class="form-field">
-        <mat-label>Expiration Date</mat-label>
-            <input matInput [matDatepicker]="picker" formControlName="expirationDate">
-            <mat-hint>MM/DD/YYYY</mat-hint>
-            <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
-            <mat-datepicker #picker></mat-datepicker>
-        <mat-error *ngIf="couponForm.get('expirationDate')?.hasError('required')">This input is required!</mat-error>
-      </mat-form-field>
+  <form [formGroup]="couponForm" (ngSubmit)="addCoupon()">
+    <mat-form-field appearance="outline" class="form-field">
+      <mat-label>Nombre</mat-label>
+      <input matInput type="text" placeholder="Nombre" formControlName="name" />
+      <mat-error *ngIf="couponForm.get('name')?.hasError('required')">
+        ¡Este campo es obligatorio!
+      </mat-error>
+    </mat-form-field>
 
-      <button mat-raised-button color="primary" type="submit">Add Coupon</button>
+    <mat-form-field appearance="outline" class="form-field">
+      <mat-label>Código</mat-label>
+      <input matInput type="text" placeholder="Código" formControlName="code" />
+      <mat-error *ngIf="couponForm.get('code')?.hasError('required')">
+        ¡Este campo es obligatorio!
+      </mat-error>
+    </mat-form-field>
 
-    </form>
-  </div>
+    <mat-form-field appearance="outline" class="form-field">
+      <mat-label>Descuento %</mat-label>
+      <input matInput type="number" placeholder="Descuento" formControlName="discount" />
+      <mat-error *ngIf="couponForm.get('discount')?.hasError('required')">
+        ¡Este campo es obligatorio!
+      </mat-error>
+    </mat-form-field>
+
+    <mat-form-field appearance="outline" class="form-field">
+      <mat-label>Fecha de Expiración</mat-label>
+          <input matInput [matDatepicker]="picker" formControlName="expirationDate">
+          <mat-hint>MM/DD/AAAA</mat-hint>
+          <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
+          <mat-datepicker #picker></mat-datepicker>
+      <mat-error *ngIf="couponForm.get('expirationDate')?.hasError('required')">¡Este campo es obligatorio!</mat-error>
+    </mat-form-field>
+
+    <button mat-raised-button color="primary" type="submit">Agregar Cupón</button>
+
+  </form>
+</div>
+
   
