--- a/src/app/admin/components/post-product/post-product.component.html
+++ b/src/app/admin/components/post-product/post-product.component.html
@@ -1,58 +1,50 @@
 <div class="container">
-    <h2>Add Product</h2>
+    <h2>Agregar Producto</h2>
     <form [formGroup]="productForm" (ngSubmit)="addProduct()">
 
         <div class="file-upload-container">
             <label class="file-upload-label">
-                <span>Select a File</span>
+                <span>Seleccionar un archivo</span>
                 <input type="file" id="fileInput" (change)="onFileSelected($event)" hidden>
                 <mat-icon>attach_file</mat-icon>
             </label>
 
             <div *ngIf="selectedFile" class="image-preview">
                 <div class="circle-image">
-                    <img [src]="imagePreview" alt="Selected Image" class="preview-image">
+                    <img [src]="imagePreview" alt="Imagen seleccionada" class="preview-image">
                 </div>
             </div>
         </div>
 
         <mat-form-field appearance="outline" class="form-field">
-            <mat-label>Select a Category</mat-label>
+            <mat-label>Seleccionar una Categoría</mat-label>
             <mat-select formControlName="categoryId" name="categoryId">
                 <mat-option *ngFor="let category of listOfCategories" [value]="category.id">
                     {{category.name}}
                 </mat-option>
             </mat-select>
-            <mat-error *ngIf="productForm.get('categoryId')?.hasError('required')">This Input Is
-                Required!
-            </mat-error>
+            <mat-error *ngIf="productForm.get('categoryId')?.hasError('required')">¡Este campo es obligatorio!</mat-error>
         </mat-form-field>
 
         <mat-form-field appearance="outline" class="form-field">
-            <mat-label>Name</mat-label>
-            <input matInput type="text" placeholder="Name" formControlName="name"/>
-            <mat-error *ngIf="productForm.get('name')?.hasError('required')">This Input Is 
-                Required!
-            </mat-error>
+            <mat-label>Nombre</mat-label>
+            <input matInput type="text" placeholder="Nombre" formControlName="name"/>
+            <mat-error *ngIf="productForm.get('name')?.hasError('required')">¡Este campo es obligatorio!</mat-error>
         </mat-form-field>
 
         <mat-form-field appearance="outline" class="form-field">
-            <mat-label>Price</mat-label>
-            <input matInput type="number" placeholder="Price" formControlName="price"/>
-            <mat-error *ngIf="productForm.get('price')?.hasError('required')">This Input Is 
-                Required!
-            </mat-error>
+            <mat-label>Precio</mat-label>
+            <input matInput type="number" placeholder="Precio" formControlName="price"/>
+            <mat-error *ngIf="productForm.get('price')?.hasError('required')">¡Este campo es obligatorio!</mat-error>
         </mat-form-field>
 
         <mat-form-field appearance="outline" class="form-field">
-            <mat-label>Description</mat-label>
-            <textarea matInput placeholder="Description" formControlName="description"></textarea>
-            <mat-error *ngIf="productForm.get('description')?.hasError('required')">This Input Is 
-                Required!
-            </mat-error>
+            <mat-label>Descripción</mat-label>
+            <textarea matInput placeholder="Descripción" formControlName="description"></textarea>
+            <mat-error *ngIf="productForm.get('description')?.hasError('required')">¡Este campo es obligatorio!</mat-error>
         </mat-form-field>
 
-        <button mat-raised-button color="primary" type="submit">Add Product</button>
+        <button mat-raised-button color="primary" type="submit">Agregar Producto</button>
 
     </form>
 </div>
