--- a/src/app/customer/components/dashboard/dashboard.component.html
+++ b/src/app/customer/components/dashboard/dashboard.component.html
@@ -1,45 +1,42 @@
-<form [formGroup]="searchProductForm" class="search-form" (submit)="submitForm()">
+<form [formGroup]="searchProductForm" class="search-form" (ngSubmit)="submitForm()">
     <mat-form-field appearance="outline" class="search-input">
-        <mat-label>Enter Keyboard to Search</mat-label>
+        <mat-label>Introduce una palabra clave para buscar</mat-label>
         <input matInput formControlName="title">
         <button mat-button matSuffix color="primary" [disabled]="searchProductForm.invalid">
-            <mat-icon>Search</mat-icon>
+            <mat-icon>search</mat-icon>
         </button>
-
     </mat-form-field>
 </form>
 
 <div class="product-list">
-
-
-
     <mat-card class="product-card" *ngFor="let product of products">
         <div class="product-image">
-            <img [src]="product.processedImg" alt="product-image">
+            <img [src]="product.processedImg" alt="imagen del producto">
         </div>
 
         <div class="product-details">
-            <h2 class="product-name" routerLink="/customer/product/{{product.id}}">{{ product.name }}</h2>
+            <h2 class="product-name" [routerLink]="'/customer/product/' + product.id">{{ product.name }}</h2>
             <p class="product-description">{{ product.description }}</p>
 
             <mat-divider></mat-divider>
             <div class="product-info">
                 <div class="info-row">
-                    <span class="info-label">Price:</span>
+                    <span class="info-label">Precio:</span>
                     <span class="info-value">${{ product.price }}</span>
                 </div>
                 <div class="info-row">
-                    <span class="info-label">Category:</span>
-                    <span class="info-value">${{ product.categoryName }}</span>
+                    <span class="info-label">Categoría:</span>
+                    <span class="info-value">{{ product.categoryName }}</span>
                 </div>
             </div>
 
             <mat-divider></mat-divider>
             <div class="actions">
                 <button mat-raised-button color="primary" class="update-button" (click)="addToCart(product.id)">
-                    Add to cart
+                    Agregar al carrito
                 </button> 
             </div>
         </div>
     </mat-card>
 </div>
+
