--- a/src/app/customer/components/my-orders/my-orders.component.html
+++ b/src/app/customer/components/my-orders/my-orders.component.html
@@ -1,41 +1,41 @@
 <ng-container>
     <mat-table #basicTable [dataSource]="myOrders" class="mat-elevation-z8">
         <ng-container matColumnDef="trackingId">
-            <mat-header-cell *matHeaderCellDef style="font-weight: bolder; color: #003973;">Tracking ID</mat-header-cell>
+            <mat-header-cell *matHeaderCellDef style="font-weight: bolder; color: #003973;">ID de seguimiento</mat-header-cell>
             <mat-cell *matCellDef="let myOrder">{{ myOrder.trackingId }}</mat-cell>
         </ng-container>
   
         <ng-container matColumnDef="amount">
-            <mat-header-cell *matHeaderCellDef style="font-weight: bolder; color: #003973;">Amount</mat-header-cell>
+            <mat-header-cell *matHeaderCellDef style="font-weight: bolder; color: #003973;">Monto</mat-header-cell>
             <mat-cell *matCellDef="let myOrder" style="font-weight: 600;">{{ myOrder.amount }}</mat-cell>
         </ng-container>
 
         <ng-container matColumnDef="description">
-            <mat-header-cell *matHeaderCellDef style="font-weight: bolder; color: #003973;">Description</mat-header-cell>
+            <mat-header-cell *matHeaderCellDef style="font-weight: bolder; color: #003973;">Descripción</mat-header-cell>
             <mat-cell *matCellDef="let myOrder">{{ myOrder.orderDescription }}</mat-cell>
         </ng-container>
           
         <ng-container matColumnDef="address">
-            <mat-header-cell *matHeaderCellDef style="font-weight: bolder; color: #003973;">Address</mat-header-cell>
+            <mat-header-cell *matHeaderCellDef style="font-weight: bolder; color: #003973;">Dirección</mat-header-cell>
             <mat-cell *matCellDef="let myOrder">{{ myOrder.address }}</mat-cell>
         </ng-container>
           
         <ng-container matColumnDef="date">
-            <mat-header-cell *matHeaderCellDef style="font-weight: bolder; color: #003973;">Date</mat-header-cell>
+            <mat-header-cell *matHeaderCellDef style="font-weight: bolder; color: #003973;">Fecha</mat-header-cell>
             <mat-cell *matCellDef="let myOrder">{{ myOrder.date | date: 'dd/MM/yyyy' }}</mat-cell>
         </ng-container>
 
         <ng-container matColumnDef="status">
-            <mat-header-cell *matHeaderCellDef style="font-weight: bolder; color: #003973;">Status</mat-header-cell>
+            <mat-header-cell *matHeaderCellDef style="font-weight: bolder; color: #003973;">Estado</mat-header-cell>
             <mat-cell *matCellDef="let myOrder">{{ myOrder.orderStatus }}</mat-cell>
         </ng-container>
           
         <ng-container matColumnDef="action">
-            <mat-header-cell *matHeaderCellDef style="font-weight: bolder; color: #003973;">Action</mat-header-cell>
+            <mat-header-cell *matHeaderCellDef style="font-weight: bolder; color: #003973;">Acción</mat-header-cell>
             <mat-cell *matCellDef="let myOrder">
                 <span *ngIf="myOrder.orderStatus == 'Delivered'"></span>
                     <button mat-raised-button color="primary" type="submit"
-                        routerLink="/customer/ordered_products/{{myOrder.id}}">Review</button>
+                        routerLink="/customer/ordered_products/{{myOrder.id}}">Reseña</button>
             </mat-cell> 
         </ng-container>
 
