--- a/src/app/customer/components/place-order/place-order.component.html
+++ b/src/app/customer/components/place-order/place-order.component.html
@@ -1,30 +1,30 @@
 <div class="container">
     <mat-card>
-      <mat-card-title>Place Order</mat-card-title>
+      <mat-card-title>Realizar Pedido</mat-card-title>
       <mat-card-content>
         <form [formGroup]="orderForm">
 
             <mat-form-field appearance="outline">
-                <mat-label>Address</mat-label>
-                <input matInput formControlName="address" placeholder="Address" required>
+                <mat-label>Dirección</mat-label>
+                <input matInput formControlName="address" placeholder="Dirección" required>
                 <mat-error *ngIf="orderForm.get('address').invalid && orderForm.get('address').touched">
-                    This Input Is Required!
+                    ¡Este campo es obligatorio!
                 </mat-error>
             </mat-form-field>
 
             <mat-form-field appearance="outline">
-                <mat-label>Description</mat-label>
-                <input matInput formControlName="orderDescription" placeholder="Description">
+                <mat-label>Descripción</mat-label>
+                <input matInput formControlName="orderDescription" placeholder="Descripción">
             </mat-form-field>
 
             <div class="button-row">
                 <button mat-raised-button color="primary" type="submit" [disabled]="orderForm.invalid"
-                    (click)="placeOrder()" class="order-button">Order</button>
+                    (click)="placeOrder()" class="order-button">Realizar Pedido</button>
                 <button mat-stroked-button color="warn" class="Close-button" (click)="closeForm()" class="clase-button">
-                    Close
+                    Cerrar
                 </button>
             </div>
         </form>
       </mat-card-content>
     </mat-card>
-  </div>
+</div>
