--- a/src/app/customer/components/review-ordered-product/review-ordered-product.component.html
+++ b/src/app/customer/components/review-ordered-product/review-ordered-product.component.html
@@ -1,38 +1,38 @@
 <form [formGroup]="reviewForm" class="review-form">
     <div class="file-upload-container">
         <label class="file-upload-label">
-            <span>Select a File</span>
+            <span>Seleccionar un archivo</span>
             <input type="file" id="fileInput" (change)="onFileSelected($event)" hidden>
             <mat-icon>attach_file</mat-icon>
         </label>
 
         <div *ngIf="selectedFile" class="image-preview">
             <div class="circle-image"></div>
-            <img [src]="imagePreview" alt="Selected Image" class="preview-image">
+            <img [src]="imagePreview" alt="Imagen seleccionada" class="preview-image">
         </div>
     </div>
 
     <mat-form-field appearance="outline">
-        <mat-label>Rating</mat-label>
+        <mat-label>Calificación</mat-label>
         <mat-select formControlName="rating">
-            <mat-option value="1">1 Star</mat-option>
-            <mat-option value="2">2 Stars</mat-option>
-            <mat-option value="3">3 Stars</mat-option>
-            <mat-option value="4">4 Stars</mat-option>
-            <mat-option value="5">5 Stars</mat-option>
+            <mat-option value="1">1 Estrella</mat-option>
+            <mat-option value="2">2 Estrellas</mat-option>
+            <mat-option value="3">3 Estrellas</mat-option>
+            <mat-option value="4">4 Estrellas</mat-option>
+            <mat-option value="5">5 Estrellas</mat-option>
         </mat-select>
         <mat-error *ngIf="reviewForm.get('rating').invalid && reviewForm.get('rating').touched">
-          Please select a rating!
+          ¡Por favor seleccione una calificación!
         </mat-error>
     </mat-form-field>
 
     <mat-form-field appearance="outline">
-        <mat-label>Description</mat-label>
-        <textarea matInput formControlName="description" placeholder="Description" rows="5"></textarea>
+        <mat-label>Descripción</mat-label>
+        <textarea matInput formControlName="description" placeholder="Descripción" rows="5"></textarea>
         <mat-error *ngIf="reviewForm.get('description').invalid && reviewForm.get('description').touched">
-          This input is required!
+          ¡Este campo es obligatorio!
         </mat-error>
     </mat-form-field>
       
-    <button mat-raised-button color="primary" type="submit" (click)="submitForm()">Submit</button>
+    <button mat-raised-button color="primary" type="submit" (click)="submitForm()">Enviar</button>
 </form>
