--- a/src/app/customer/components/view-ordered-products/view-ordered-products.component.html
+++ b/src/app/customer/components/view-ordered-products/view-ordered-products.component.html
@@ -2,29 +2,30 @@
     <div class="ordered-product" *ngFor="let product of orderedProductDetailList">
         <div class="product-info">
             <div class="product-image">
-                <img [src]="product.processedImg" alt="product-image">
+                <img [src]="product.processedImg" alt="imagen del producto">
             </div>
+
             <div class="product-details">
                 <div class="item-row">
                     <div class="item-name">
                         {{ product.name }}
                     </div>
                     <div class="item-price">
-                        Price: {{ product.productPrice | currency }}
+                        Precio: {{ product.productPrice | currency }}
                     </div>
                     <div class="item-quantity">
-                        Quantity: {{ product.quantity }}
+                        Cantidad: {{ product.quantity }}
                     </div>
                 </div>
             </div>
 
             <div class="action-buttons">
-                <button mat-raised-button color="primary" routerLink="/customer/review/{{product.id}}">Give
-                    Review</button>
+                <button mat-raised-button color="primary" routerLink="/customer/review/{{product.id}}">Dejar
+                    reseña</button>
             </div>
         </div>
         <div class="total-price">
             Total: {{ totalAmount | currency }}
         </div>
     </div>
-  </div>
+</div>
