--- a/src/app/customer/components/view-product-detail/view-product-detail.component.html
+++ b/src/app/customer/components/view-product-detail/view-product-detail.component.html
@@ -1,46 +1,47 @@
 <div class="center-container" *ngIf="product">
     <div class="product-card">
         <div class="product-image">
-            <img [src]="product.processedImg" alt="{{ product.name }} Image">
+            <img [src]="product.processedImg" alt="{{ product.name }} Imagen">
         </div>
         <div class="product-details">
+
             <h2>{{ product.name }}</h2>
             <p class="description">{{ product.description }}</p>
-            <p class="price">Price: ${{ product.price }}</p>
-            <p class="category">Category: {{ product.categoryName }}
+            <p class="price">Precio: ${{ product.price }}</p>
+            <p class="category">Categoría: {{ product.categoryName }}
                 <mat-icon class="heart-icon" (click)="addToWishlist()"
                 style="cursor: pointer; margin-top: 10px;">favorite_border</mat-icon>
             </p>
         </div>
     </div>
 </div>
-  
-<h1 class="section-heading" *ngIf="reviews.length > 0">Customer Reviews</h1>
+
+<h1 class="section-heading" *ngIf="reviews.length > 0">Reseñas de Clientes</h1>
 <div *ngIf="reviews" class="review-list">
     <div class="center-container">
         <div *ngFor="let review of reviews" class="review-card">
             <div class="review-image">
-                <img [src]="product.processedImg" *ngIf="review.processedImg" alt="{{ review.description}} image" class="small-image">
+                <img [src]="product.processedImg" *ngIf="review.processedImg" alt="{{ review.description}} imagen" class="small-image">
             </div>
             <div class="review-details">
                 <h2>{{ review.description }}</h2>
                 <div class="details-row">
-                    <p class="rating">Rating: {{ review.rating }} -</p>
-                    <p class="username">Username: {{ review.username }}</p>
+                    <p class="rating">Calificación: {{ review.rating }} -</p>
+                    <p class="username">Nombre de usuario: {{ review.username }}</p>
                 </div>
             </div>
         </div>
     </div>
 </div>
 
-<h1 class="section-heading" *ngIf="FAQS.length > 0">Frequently Asked Questions</h1>
+<h1 class="section-heading" *ngIf="FAQS.length > 0">Preguntas Frecuentes</h1>
 <div *ngIf="FAQS" class="faq-list">
     <div class="center-container">
         <div *ngFor="let faq of FAQS" class="faq-card">
             <div class="faq-details">
-                <p class="question">Question:</p>
+                <p class="question">Pregunta:</p>
                 <p class="question-text">{{ faq.question }}</p>
-                <p class="answer">Answer:</p>
+                <p class="answer">Respuesta:</p>
                 <p class="answer-text">{{ faq.answer }}</p>
             </div>
         </div>
