--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,37 +1,38 @@
 <div class="container">
     <mat-card>
-        <mat-card-title>Login</mat-card-title>
+        <mat-card-title>Iniciar Sesión</mat-card-title>
         <mat-card-content>
             <form [formGroup]="loginForm">
-                
+
                 <mat-form-field appearance="outline">
-                    <mat-label>E-Mail</mat-label>
-                    <input matInput formControlName="email" placeholder="Email" required>
+                    <mat-label>Correo Electrónico</mat-label>
+                    <input matInput formControlName="email" placeholder="Correo Electrónico" required>
                     <mat-error *ngIf="loginForm.get('email').invalid && loginForm.get('email').touched">
-                        Please enter a valid Email Address.
+                        Por favor, ingresa una dirección de correo válida.
                     </mat-error>
                 </mat-form-field>
 
                 <mat-form-field appearance="outline">
-                    <mat-label>Password</mat-label>
-                    <input matInput type="{{hidePassword? 'password':'text'}}" formControlName="password" 
-                        placeholder="password" required>
+                    <mat-label>Contraseña</mat-label>
+                    <input matInput type="{{hidePassword? 'password':'text'}}" formControlName="password"
+                        placeholder="Contraseña" required>
 
                         <button mat-icon-button matSuffix (click)="togglePasswordVisibility()">
                             <mat-icon>{{ hidePassword? 'visibility_off':'visibility'}}</mat-icon>
                         </button>
 
                         <mat-error *ngIf="loginForm.get('password').invalid && loginForm.get('password').touched">
-                            Please enter a valid password.
+                            Por favor, ingresa una contraseña válida.
                         </mat-error>
-                    </mat-form-field>
-                    <button mat-raised-button color="primary" type="submit" [disabled]="loginForm.invalid"
-                    (click)="onSubmit()">Login</button>
+                </mat-form-field>
+                <button mat-raised-button color="primary" type="submit" [disabled]="loginForm.invalid"
+                (click)="onSubmit()">Iniciar Sesión</button>
             </form>
+            
         </mat-card-content>
 
         <mat-card-actions>
-            <button mat-button color="accent" routerLink="/signup">Don´t have an account ? Sing up</button>    
+            <button mat-button color="accent" routerLink="/signup">¿No tienes una cuenta? Regístrate</button>
         </mat-card-actions>
     </mat-card>
 </div>
