--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -1,55 +1,55 @@
 <div class="container">
     <mat-card>
-        <mat-card-title>Sign Up</mat-card-title>
+        <mat-card-title>Regístrate</mat-card-title>
 
         <mat-card-content>
             <form [formGroup]="signupForm">
                 <mat-form-field appearance="outline">
-                    <mat-label>Name</mat-label>
-                    <input matInput formControlName="name" placeholder="Name" required>
+                    <mat-label>Nombre</mat-label>
+                    <input matInput formControlName="name" placeholder="Nombre" required>
 
                     <mat-error *ngIf="signupForm.get('name').invalid && signupForm.get('name').touched">
-                        Please enter a valid name.
+                        Por favor, ingresa un nombre válido.
                     </mat-error>
                 </mat-form-field>
 
                 <mat-form-field appearance="outline">
-                    <mat-label>Email</mat-label>
-                    <input matInput formControlName="email" placeholder="email" required>
+                    <mat-label>Correo Electrónico</mat-label>
+                    <input matInput formControlName="email" placeholder="Correo Electrónico" required>
 
                     <mat-error *ngIf="signupForm.get('email')?.invalid && signupForm.get('email')?.touched">
-                        Please enter a valid email.
+                        Por favor, ingresa un correo electrónico válido.
                     </mat-error>
                 </mat-form-field>
 
                 <mat-form-field appearance="outline">
-                    <mat-label>Password</mat-label>
-                    <input matInput type="{{hidePassword? 'password':'text'}}" formControlName="password" placeholder="password" required>
+                    <mat-label>Contraseña</mat-label>
+                    <input matInput type="{{hidePassword? 'password':'text'}}" formControlName="password" placeholder="Contraseña" required>
 
                     <button mat-icon-button matSuffix (click)="togglePasswordVisibility()">
                         <mat-icon>{{ hidePassword? 'visibility_off':'visibility'}}</mat-icon>
                     </button>
 
                     <mat-error *ngIf="signupForm.get('password').invalid && signupForm.get('password').touched">
-                        Please enter a valid password.
+                        Por favor, ingresa una contraseña válida.
                     </mat-error>
                 </mat-form-field>
 
                 <mat-form-field appearance="outline">
-                    <mat-label>Confirmar Password</mat-label>
-                    <input matInput type="{{hidePassword? 'password':'text'}}" formControlName="confirmPassword" placeholder="confirmPassword" required>
+                    <mat-label>Confirmar Contraseña</mat-label>
+                    <input matInput type="{{hidePassword? 'password':'text'}}" formControlName="confirmPassword" placeholder="Confirmar Contraseña" required>
 
                     <button mat-icon-button matSuffix (click)="togglePasswordVisibility()">
                         <mat-icon>{{ hidePassword? 'visibility_off':'visibility'}}</mat-icon>
                     </button>
 
                     <mat-error *ngIf="signupForm.get('confirmPassword').invalid && signupForm.get('confirmPassword').touched">
-                        Please enter a valid Confirmar Password.
+                        Por favor, confirma tu contraseña.
                     </mat-error>
                 </mat-form-field>
 
                 <button mat-raised-button color="primary" type="submit" [disabled]="signupForm.invalid" (click)="onSubmit()">
-                    Sign Up
+                    Registrarse
                 </button>
             </form>
         </mat-card-content>
